--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@ body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-  background: url("images/bg1.jpg") no-repeat center center fixed;
-  background-size: cover;
+  background: #000;
 
   color: #fff;
   -webkit-font-smoothing: antialiased;
