--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-  background: #000;
+  background: url("images/bg1.jpg") no-repeat center center fixed;
+  background-size: cover;
 
   color: #fff;
   -webkit-font-smoothing: antialiased;
